# Rusty

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
binarizeimage/: binarizeimage.cpp  binarizeimage.h  binarizeimage.ui
histogramequalization/: histogramequalization.cpp  histogramequalization.h  histogramequalization.ui
imagebinarization/: imagebinarization.cpp  imagebinarization.h  imagebinarization.ui
imagemorphology/: imagemorphology.cpp  imagemorphology.h  imagemorphology.ui
imagerestoration/: imagerestoration.cpp  imagerestoration.h  imagerestoration.ui
imagesegmentation/: imagesegmentation.cpp  imagesegmentation.h  imagesegmentation.ui
playvideo/: playvideo.cpp  playvideo.h  playvideo.ui
reconstruction/: reconstruction.cpp  reconstruction.h  reconstruction.ui
utility/: utility.cpp  utility.h
videoplayer/: videoplayer.cpp  videoplayer.h  videoplayer.ui
